ligolang/tools/lsp/squirrel/test/contracts/bad/missing-paren.ligo
function idsa (const iff : int) : int is (iff
